--- a/ds100/disc-sp25/_quarto.yml
+++ b/ds100/disc-sp25/_quarto.yml
@@ -10,6 +10,7 @@ book:
       type: textbox
     chapters:
       - index.qmd
+      - disc01/disc01.qmd
       - disc02/disc02.qmd
       - disc03/disc03.qmd
       - disc04/disc04.qmd
