--- a/ds100/disc-sp25/_quarto.yml
+++ b/ds100/disc-sp25/_quarto.yml
@@ -19,3 +19,5 @@ book:
       - disc07/disc07.qmd
       - disc08/disc08.qmd
       - disc09/disc09.qmd
+      - disc10/disc10.qmd
+      - disc11/disc11.qmd
